initial commit of formats and tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ packages =
     pyseq.kmer_utils
     pyseq.sequence_io
     pyseq.apps
+    pyseq.formats
 
 [options.entry_points]
 console_scripts =
